--- a/Thinking/AddressBook/AddressBook/Base.lproj/Main.storyboard
+++ b/Thinking/AddressBook/AddressBook/Base.lproj/Main.storyboard
@@ -14,9 +14,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="yZz-mJ-mQQ">
+                            <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="AtC-wM-JxH" id="tku-0j-MVW"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="addressBook" id="mT9-RF-5UD">
-                                <rect key="frame" x="0.0" y="113.5" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="157.5" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mT9-RF-5UD" id="AXc-ao-p82">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
@@ -62,9 +70,10 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="输入歌手" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mkD-qb-Jtw">
-                                                    <rect key="frame" x="8" y="7" width="584" height="30"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="输入歌手" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mkD-qb-Jtw">
+                                                    <rect key="frame" x="8" y="5" width="584" height="30"/>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
                                             </subviews>
@@ -83,7 +92,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="输入歌曲" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9nR-vU-AtH">
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="输入歌曲" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9nR-vU-AtH">
                                                     <rect key="frame" x="8" y="7" width="584" height="30"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -94,6 +103,43 @@
                                                 <constraint firstAttribute="bottomMargin" secondItem="9nR-vU-AtH" secondAttribute="bottom" constant="-1" id="bri-AX-BES"/>
                                                 <constraint firstItem="9nR-vU-AtH" firstAttribute="top" secondItem="5ZR-rs-gSu" secondAttribute="topMargin" constant="-1" id="tQp-rU-WCk"/>
                                                 <constraint firstItem="9nR-vU-AtH" firstAttribute="leading" secondItem="5ZR-rs-gSu" secondAttribute="leadingMargin" id="wF5-HN-tql"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="I2z-5f-FLq">
+                                        <rect key="frame" x="0.0" y="187" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="I2z-5f-FLq" id="WLq-IG-HMP">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="姓名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FYh-Ec-p5w">
+                                                    <rect key="frame" x="27" y="12" width="34" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="歌曲" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rPJ-LW-T4Y">
+                                                    <rect key="frame" x="83" y="12" width="34" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ouh-Ql-Unz">
+                                                    <rect key="frame" x="138" y="8" width="30" height="30"/>
+                                                    <state key="normal" title="编辑"/>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="FYh-Ec-p5w" secondAttribute="bottom" constant="2.5" id="5HE-xS-G2G"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="rPJ-LW-T4Y" secondAttribute="bottom" constant="2.5" id="6fS-AS-bqg"/>
+                                                <constraint firstItem="Ouh-Ql-Unz" firstAttribute="top" secondItem="WLq-IG-HMP" secondAttribute="topMargin" id="EAe-wY-OmE"/>
+                                                <constraint firstItem="rPJ-LW-T4Y" firstAttribute="leading" secondItem="FYh-Ec-p5w" secondAttribute="trailing" constant="22" id="Eai-GC-drs"/>
+                                                <constraint firstItem="FYh-Ec-p5w" firstAttribute="top" secondItem="WLq-IG-HMP" secondAttribute="topMargin" constant="4" id="Lih-Us-CvJ"/>
+                                                <constraint firstItem="FYh-Ec-p5w" firstAttribute="leading" secondItem="WLq-IG-HMP" secondAttribute="leadingMargin" constant="19" id="MZh-5F-Jxq"/>
+                                                <constraint firstItem="rPJ-LW-T4Y" firstAttribute="top" secondItem="WLq-IG-HMP" secondAttribute="topMargin" constant="4" id="Nzm-yV-I6Z"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Ouh-Ql-Unz" secondAttribute="bottom" constant="-2.5" id="nEk-lN-gxx"/>
+                                                <constraint firstItem="Ouh-Ql-Unz" firstAttribute="leading" secondItem="rPJ-LW-T4Y" secondAttribute="trailing" constant="21" id="vDr-Xr-7Ls"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -118,7 +164,9 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="singer" destination="mkD-qb-Jtw" id="9aP-08-eIU"/>
+                        <outlet property="singerLabel" destination="FYh-Ec-p5w" id="x1Z-Gw-4fc"/>
                         <outlet property="songName" destination="9nR-vU-AtH" id="hJw-YZ-Wat"/>
+                        <outlet property="songNameLabel" destination="rPJ-LW-T4Y" id="Yqt-hL-IX2"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xoe-s0-6YX" userLabel="First Responder" sceneMemberID="firstResponder"/>
